docs: create tags property in front matter

--- a/src/posts/docs/ps/baekjoon/2558.md
+++ b/src/posts/docs/ps/baekjoon/2558.md
@@ -1,6 +1,8 @@
 ---
 title: '2558번: A+B - 2'
 description: 'C 및 Cpp 언어로 풀이한 백준 2558번 문제.'
+tags:
+  - 'baekjoon'
 ---
 
 6개월만에 코딩공부를 다시 시작했더니 C언어 문법을 많이 잊어버렸다. 백준 티어도 올릴겸, 코딩 공부도 다시 시작할겸 가장 기초적인 문제들부터 풀어나가고자 한다. 예전에 1000번 문제를 풀어버려서, 2558번 문제부터 풀기 시작하였다.
